--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@agapi-development-tools/common-utilities",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@10.18.3",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -28,6 +27,6 @@
     "@agapi-development-tools/eslint-config": "workspace:*",
     "@types/node": "22.12.0",
     "typescript": "5.9.3",
-    "jiti": "2.6.1"
+    "eslint": "9.38.0"
   }
 }
