--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build --loglevel=error --no-update-notifier"
   },
   "dependencies": {},
   "devDependencies": {
